<resources>
    <string name="app_name">Fútbol Tinder</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="nameFieldRegistrationFormText">Nombre</string>
    <string name="lastNameFieldRegistrationFormText">Apellido</string>
    <string name="usernameFieldRegistrationFormText">Nombre de usuario</string>
    <string name="emailFieldRegistrationFormText">Email</string>
    <string name="passwordFieldRegistrationFormText">Contraseña</string>
    <string name="passwordBisFieldRegistrationFormText">Repita contraseña</string>
    <string name="registrationFormButtonText">Registrarse</string>
    <string name="homeLoginBaseText">Fútbol Tinder App!</string>
    <string name="homeRegistrationButtonText">Registrarse</string>
    <string name="homeLoginButtonText">Iniciar sesión</string>
    <string name="joinMatchButton">Unirme!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear_partido">Crear Partido</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="mapActivityButtonText">Buscar</string>
    <string name="mapActivityEditTextHint">Buscar dirección</string>
    <!-- -
    This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638
<!- -->
    <string name="interstitial_ad_unit_id">YOUR_INTERSTITIAL_AD_UNIT_ID</string>
    <string name="inicio">Inicio</string>
    <string name="cantidad_de_cupos">Cantidad de cupos</string>
    <string name="crear">Crear</string>
    <string name="direcci_n">Dirección</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="encuentra_a_tus_compa_eros_de_equipo">Encuentra a tus compañeros de equipo!</string>
    <string name="api_error">Ha ocurrido un error. Por favor probá de vuelta más tarde</string>
    <string name="location_message">Por favor, habilitá la ubicación en tu dispositivo</string>
    <string name="end_session_success_text">Ha cerrado sesión exitosamente!</string>
    //PARAMS_NAMES_CONSTANTES
    <string name="USER_ID_PARAM_NAME">userId</string>
    <string name="back_to_home">Volver a Inicio</string>
    <string name="match_created_successfuly">El partido se ha creado con éxito!</string>
    <string name="leaveMatchButton">Des-Unirme!</string>


</resources>